[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Enemies/Gordon Oh/MAGE.png" type="Texture" id=1]
[ext_resource path="res://Assets/Other/ShadowWhite_32x32.png" type="Texture" id=2]
[ext_resource path="res://Enemies/GordonOh/GordonOh.gd" type="Script" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=6]
[ext_resource path="res://Effects/GateEffect/GateEffect.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/SFX/Mixkit/gardon-oh-summon.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/InsectDeathSFX.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 64, 71 ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "summon"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 56, 59 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16, 22 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.0
height = 4.0

[sub_resource type="CircleShape2D" id=7]
radius = 322.025

[sub_resource type="CircleShape2D" id=8]
radius = 192.094

[node name="GordonOh" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )
vframes = 9
hframes = 8
frame = 71

[node name="Sprite" type="Sprite" parent="Sprite"]
self_modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/death = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/summon = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 6 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 0.737255, 0.709804, 0.258824, 1 )
shape = SubResource( 7 )

[node name="CreateEffectObject" parent="." instance=ExtResource( 6 )]

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
self_modulate = Color( 0.411765, 0.0784314, 0.0784314, 1 )
shape = SubResource( 8 )

[node name="GateEffect" parent="." instance=ExtResource( 7 )]
position = Vector2( -48, -16 )

[node name="GateEffect2" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -64 )

[node name="GateEffect3" parent="." instance=ExtResource( 7 )]
position = Vector2( 48, -16 )

[node name="GateEffect4" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 40 )

[node name="Summon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="InsectDeathSFX" parent="." instance=ExtResource( 9 )]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]
